sass/layouts/_app.scss
.main_body {
  @extend %stretch;

  width: 100%;
  z-index: 2;
  top: $site-header-height;
  bottom: em(32);

  @media screen and (max-width: 650px) {
    bottom: em(64);
    padding-bottom: em(64);
  }
}


$control-column-closed-width: 0;
$control-column-open-width: em(480);

#control-column {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: $control-column-closed-width;
  height: 100%;
  border-left: 0;
  background: scale-color($alpha_gray, $lightness: 90%);
  z-index: 9999;

  -webkit-transition: width 0.1s ease-in-out;
  -moz-transition: width 0.1s ease-in-out;
  transition: width 0.1s ease-in-out;

  > * {
    font-size: em($small_point_size);
  }

  &.open {
    width: $control-column-open-width;
    
    border-left: 1px solid $golf_gray;
  }

  .control-icon {
    font-size: em($small_point_size);
    color: $delta_gray;
    cursor: pointer;
    position: absolute;
    top: 0.25em;
    left: 0.35em;
    display: block;
    width: 1em;
    z-index: 1;
    
    &:before {
      content: "\22";
    }
  }

  .control-container {
    position:absolute;
    top:0;
    bottom: 0;
    width: 100%;
    overflow-x: scroll;
    
    > fieldset, > section {
      border-bottom: 1px solid $golf_gray;

      &:last-child {
        border: 0;
      }
    }
    
    &.promo {
      bottom: 12em;
    }
  }

  #promo {
    position:absolute;
    height: 12em;
    border-top: 1px solid $delta_color_fox;
    background-color: $delta_color_india;

    bottom: 0;
    float: left;
    overflow-x: scroll;
    
    .swag-promo {
      height: inherit;
    }
    
    img {
      margin-top: -2em;
    }
  }

  fieldset, section {
    padding: 1em 2.5em 0 3em;
    float: left;
    width: 100%;
    clear: both;
  }

  h2 {
    @extend %headings_2;

    font-weight: 100;
    color: $bravo_gray;
    margin-bottom: 0;
  }

  h3 {
    @extend %headings_6;

    font-weight: 300;
    color: $charlie_gray;
    margin: 0;

    &.syntax, &.version {
      width: 15%;
      display: block;
      float: left;
      clear: both;
      line-height: 2.5;
    }
  }

  %toggle-group {
    @include border_radius(em(8));

    border: 1px solid $golf_gray;
    display: block;
    position: relative;
    z-index: 1;
    float: left;
    width: 100%;
    padding: 0;
    background: $white;
    margin-bottom: 1.5em;

    input {
      position: absolute;
      opacity: 0;
      z-index: -10;
    }

    label {
      font-weight: 300;
      padding: 0.5em;
      display: inline-block;
      float: left;
      cursor: pointer;
      z-index: 3;
      position: relative;
      text-align: center;
      text-shadow: none;
      color: inherit;

      -webkit-transition: all 0.2s ease-in-out;
      -moz-transition: all 0.2s ease-in-out;
      transition: all 0.2s ease-in-out;
    }

    input:checked + label {
      color: $white;
      text-shadow: 0 0 0.25em darken($alpha_color, 10%);
    }

    span {
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;

      -webkit-transition: left 0.2s ease-in-out;
      -moz-transition: left 0.2s ease-in-out;
      transition: left 0.2s ease-in-out;

      @include border_radius(em(6));
    }

    %toggle-input {
      background: $alpha_color_delta;
    }
  }

  .syntax-toggle-group {
    @extend %toggle-group;

    width: 50%;
    clear: right;

    label, span {
      width: 50%;
    }

    %toggle-input {
      width: 50%
    }

    #syntax-scss:checked ~ span {
      @extend %toggle-input;
    }

    #syntax-sass:checked ~ span {
      @extend %toggle-input;

      left: 50%;
    }
  }

  .version-toggle-group {
    @extend %toggle-group;

    width: 66%;
    clear: right;

    &:after { content:"\A"; display: block;white-space:pre; }

    label, span {
      width: 33.33334%;
    }

    %toggle-input {
      width: 33.33334%
    }

    #version-sass3-3:checked ~ span {
      @extend %toggle-input;
    }

    #version-sass3-2:checked ~ span {
      @extend %toggle-input;

      left: 33.33334%;
    }

    #version-lib:checked ~ span {
      @extend %toggle-input;

      left: 66.66667%;
    }
  }

  .output-toggle-group {
    @extend %toggle-group;

    label, span {
      width: 25%;
    }


    %toggle-input {
      width: 25%
    }

    #expanded-output:checked ~ span {
      @extend %toggle-input;
    }
    #nested-output:checked ~ span {
      @extend %toggle-input;
      left: 25%;
    }
    #compact-output:checked ~ span {
      @extend %toggle-input;
      left: 50%;
    }
    #compressed-output:checked ~ span {
      @extend %toggle-input;
      left: 75%;
    }
  }

  .html-toggle-group {
    @extend %toggle-group;


    label, span {
      width: 25%;
    }

    %toggle-input {
      width: 25%
    }

    #html-html:checked ~ span {
      @extend %toggle-input;
    }
    #html-haml:checked ~ span {
      @extend %toggle-input;
      left: 25%;
    }
    #html-mkdn:checked ~ span {
      @extend %toggle-input;
      left: 50%;
    }
    #html-txtl:checked ~ span {
      @extend %toggle-input;
      left: 75%;
    }
  }
}

#casement {
  @extend %stretch;
}

#rendered-html {
  @extend %grid_full;

  float: left;
  padding-top: 0.66667em;
  height: 100%;
  background: $white;
}

#rendered {
  @extend %stretch;

  z-index: 200;
}

#sash_cover {
  @extend %stretch;

  z-index: 201;
  display: none;
}

.panel {
  @extend %stretch;
}

